--- a/src/index.css
+++ b/src/index.css
@@ -1,5 +1,33 @@
 body {
-  margin: 0;
+  margin: 25px;
   padding: 0;
   font-family: sans-serif;
+  background: url(https://i.imgur.com/i49b44f.jpg);
+}
+
+#game {
+  position: fixed;
+  top: 0;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  width: 100%;
+  height: 100%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+
+#circle {
+  border: 10px solid black;
+	border-radius: 50%;
+	width: 300px;
+  height: 300px;
+}
+
+#control {
+  border: 5px solid black;
+	border-radius: 50%;
+	width: 100px;
+  height: 100px;
 }
