--- a/src/index.css
+++ b/src/index.css
@@ -70,6 +70,7 @@ body {
 #quarter-circle-top-right {
   position: absolute;
   margin-top: 70px;
+  /* fix margin */
   margin-right: 70px;
   width: 140px;
   height: 140px;
