--- a/src/index.css
+++ b/src/index.css
@@ -6,16 +6,14 @@ body {
 }
 
 #game {
+  display: flex;
   position: absolute;
+  justify-content: center;
+  align-items: center;
   top: 0;
   left: 0;
   right: 0;
   bottom: 0;
-  width: 100%;
-  height: 100%;
-  display: flex;
-  justify-content: center;
-  align-items: center;
 }
 
 #circle {
@@ -23,7 +21,6 @@ body {
 	border-radius: 50%;
 	width: 300px;
   height: 300px;
-  display: block;
   justify-content: center;
   align-items: center;
 }
@@ -105,4 +102,69 @@ body {
   -moz-border-radius: 140px 0 0 0;
   -webkit-border-radius: 140px 0 0 0;
   z-index: 2;
+}
+
+@media all and (min-width: 700px) {
+  #circle {
+    border: 20px solid black;
+    width: 600px;
+    height: 600px;
+  }
+
+  #control {
+    border: 10px solid black;
+    width: 300px;
+    height: 300px;
+    margin-top: 130px;
+    margin-left: 130px;
+  }
+
+  #vertical {
+    margin-left: 274px;
+	  width: 20px;
+    height: 580px;
+  }
+
+  #horizontal {
+    margin-top: 276px;
+    width: 580px;
+    height: 20px;
+  }
+
+  #quarter-circle-bottom-right {
+    width: 280px;
+    height: 280px;
+    border-radius: 0 0 280px 0;
+    -moz-border-radius: 0 0 280px 0;
+    -webkit-border-radius: 0 0 280px 0;
+    margin-top: 280px;
+    margin-left: 280px;
+  }
+
+  #quarter-circle-bottom-left {
+    margin-top: 280px;
+    margin-right: 40px;
+    width: 280px;
+    height: 280px;
+    border-radius: 0 0 0 280px;
+    -moz-border-radius: 0 0 0 280px;
+    -webkit-border-radius: 0 0 0 280px;
+  }
+
+  #quarter-circle-top-right {
+    width: 280px;
+    height: 280px;
+    border-radius: 0 280px 0 0;
+    -moz-border-radius: 0 280px 0 0;
+    -webkit-border-radius: 0 280px 0 0;
+    margin-left: 280px;
+  }
+
+  #quarter-circle-top-left {
+    width: 280px;
+    height: 280px;
+    border-radius: 280px 0 0 0;
+    -moz-border-radius: 280px 0 0 0;
+    -webkit-border-radius: 280px 0 0 0;
+  }
 }
