--- a/src/index.css
+++ b/src/index.css
@@ -5,13 +5,6 @@ body {
   background: url(https://i.imgur.com/i49b44f.jpg);
 }
 
-@font-face {
-  font-family: 'Simon';
-  font-weight: 900;
-  src: url(https://fonts.gstatic.com/s/alfaslabone/v7/Qx6FPcitRwTC_k88tLPc-TxObtw73-qQgbr7Be51v5c.woff2) format('woff2');
-  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
-}
-
 #game {
   display: flex;
   position: absolute;
@@ -112,6 +105,13 @@ body {
   z-index: 2;
 }
 
+@font-face {
+  font-family: 'Simon';
+  font-weight: 900;
+  src: url(https://fonts.gstatic.com/s/alfaslabone/v7/Qx6FPcitRwTC_k88tLPc-TxObtw73-qQgbr7Be51v5c.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2212, U+2215;
+}
+
 #logo {
   font-size: 240%;
   margin-top: 24px;
@@ -119,9 +119,14 @@ body {
   font-family: Simon;
 }
 
-#sup {
+#reg {
   font-size: 30%;
   vertical-align: super;
+}
+
+#main {
+  display: flex;
+  flex-direction: row;
 }
 
 #switch {
