--- a/src/index.css
+++ b/src/index.css
@@ -183,6 +183,9 @@ body {
   width: 35px;
   height: 23px;
   margin-left: 15px;
+  font-size: 100%;
+  padding-left: 10px;
+  letter-spacing: 3px;
 }
 
 @media all and (min-width: 700px) {
@@ -288,5 +291,7 @@ body {
     width: 70px;
     height: 52px;
     margin-left: 30px;
+    font-size: 200%;
+    padding-left: 20px;
   }
 }
