--- a/src/index.css
+++ b/src/index.css
@@ -188,6 +188,28 @@ body {
   letter-spacing: 3px;
 }
 
+#start {
+  background: #ff0019;
+  border: 2.5px solid #464646;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  border-radius: 50%;
+  width: 19px;
+  height: 19px;
+  margin-top: 3.25px;
+  margin-left: 12px;
+}
+
+#strict {
+  background: #fffc4a;
+  border: 2.5px solid #464646;
+  box-shadow: 0 0 10px rgba(0,0,0,0.5);
+  border-radius: 50%;
+  width: 19px;
+  height: 19px;
+  margin-top: 3.25px;
+  margin-left: 12px;
+}
+
 @media all and (min-width: 700px) {
   #circle {
     border: 20px solid #333333;
@@ -293,5 +315,23 @@ body {
     margin-left: 30px;
     font-size: 200%;
     padding-left: 20px;
+  }
+
+  #start {
+    border: 5px solid #464646;
+    box-shadow: 0 0 20px rgba(0,0,0,0.5);
+    width: 38px;
+    height: 38px;
+    margin-top: 6.5px;
+    margin-left: 24px;
+  }
+  
+  #strict {
+    border: 5px solid #464646;
+    box-shadow: 0 0 20px rgba(0,0,0,0.5);
+    width: 38px;
+    height: 38px;
+    margin-top: 6.5px;
+    margin-left: 24px;
   }
 }
