--- a/src/index.css
+++ b/src/index.css
@@ -120,6 +120,14 @@ body {
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2212, U+2215;
 }
 
+@font-face {
+  font-family: 'VT323';
+  font-style: normal;
+  font-weight: 400;
+  src: local('VT323 Regular'), local('VT323-Regular'), url(https://fonts.gstatic.com/s/vt323/v9/lo_L7yCDHYN9FAxvMCI1vQ.woff2) format('woff2');
+  unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2212, U+2215;
+}
+
 #logo {
   font-size: 240%;
   margin-top: 24px;
@@ -201,6 +209,7 @@ body {
   margin-left: 15px;
   font-size: 100%;
   padding-left: 10px;
+  padding-bottom: 23px;
   letter-spacing: 3px;
 }
 
@@ -214,7 +223,24 @@ body {
   margin-left: 15px;
   font-size: 100%;
   padding-left: 10px;
+  padding-bottom: 23px;
   letter-spacing: 3px;
+}
+
+#counter {
+  font-family: VT323, monospace;
+  background: #32050c;
+  color: #e20930;
+  border: 2px solid #333333;
+  border-radius: 23%;
+  width: 35px;
+  height: 23px;
+  margin-left: 15px;
+  font-size: 121%;
+  padding-top: -110px;
+  padding-left: 9px;
+  padding-bottom: 23px;
+  letter-spacing: 1px;
 }
 
 #start {
@@ -407,6 +433,7 @@ body {
     margin-left: 30px;
     font-size: 200%;
     padding-left: 20px;
+    padding-bottom: 46px;
   }
 
   #countON {
@@ -416,6 +443,18 @@ body {
     margin-left: 30px;
     font-size: 200%;
     padding-left: 20px;
+    padding-bottom: 46px;
+  }
+
+  #counter {
+    border: 4px solid #333333;
+    width: 70px;
+    height: 52px;
+    margin-left: 30px;
+    font-size: 242%;
+    padding-top: -220px;
+    padding-left: 18px;
+    padding-bottom: 46px;
   }
 
   #start {
